// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allUserReducer should handle SET_AVATAR_DATA 1`] = `
Object {
  "userDataById": Object {
    "undefined": Object {
      "avatar": "blob:http://localhost:3000/595ee9e0-fbd4-4712-98e1-1fd759dca517",
    },
  },
}
`;

exports[`allUserReducer should handle SET_USER_DATA 1`] = `
Object {
  "userDataById": Object {
    "22bb3fe5-185c-4c87-8633-1586586506b7": Object {
      "accountId": "22bb3fe5-185c-4c87-8633-1586586506b7",
      "avatar": "blob:http://localhost:3000/595ee9e0-fbd4-4712-98e1-1fd759dca517",
      "bio": "populated",
      "dob": 1615046987793,
      "gender": "gender",
      "name": null,
    },
  },
}
`;
